--- a/templates/page.tmpl
+++ b/templates/page.tmpl
@@ -25,7 +25,7 @@
 </div>
 
 <TMPL_IF NAME="HAVE_ACTIONS">
-<div id="actions">
+<div class="actions">
 <ul>
 <TMPL_IF NAME="EDITURL">
 <li><a href="<TMPL_VAR EDITURL>">Edit</a></li>
