--- a/templates/page.tmpl
+++ b/templates/page.tmpl
@@ -6,6 +6,9 @@
 <title><TMPL_VAR TITLE></title>
 <link rel="stylesheet" href="<TMPL_VAR BASEURL>style.css" type="text/css" />
 <link rel="stylesheet" href="<TMPL_VAR BASEURL>local.css" type="text/css" />
+<TMPL_IF NAME="RSSLINK">
+<TMPL_VAR RSSLINK>
+</TMPL_IF>
 <TMPL_IF NAME="META">
 <TMPL_VAR META>
 </TMPL_IF>
