--- a/templates/inlinepage.tmpl
+++ b/templates/inlinepage.tmpl
@@ -9,15 +9,16 @@
 </span>
 </TMPL_IF>
 <span class="header">
+<TMPL_IF NAME="PERMALINK">
+<a href="<TMPL_VAR PERMALINK>"><TMPL_VAR TITLE></a>
+<TMPL_ELSE>
 <a href="<TMPL_VAR PAGEURL>"><TMPL_VAR TITLE></a>
+</TMPL_IF>
 </span>
 <TMPL_VAR CONTENT>
 
 <span class="pageinfo">
 Posted <TMPL_VAR CTIME>
-<TMPL_IF NAME="PERMALINK">
-(<a rel="bookmark" href="<TMPL_VAR NAME=PERMALINK>">permalink</a>)
-</TMPL_IF>
 </span>
 
 <span class="tags">
