--- a/basewiki/style.css
+++ b/basewiki/style.css
@@ -1,7 +1,7 @@
 /* ikiwiki style sheet */
 
-/* Note that instead of modifying this style sheet, you can instead create
- * a local.css in your wiki, and override or change settings in this one.
+/* Note that instead of modifying this style sheet, you can instead edit
+ * local.css and use it to override or change settings in this one.
  */
 
 .header {
