* Atom feed support based on a patch by Clint Adams. * Add feeds=no option to inline preprocessor directive to turn off all types   of feeds. feeds=rss will still work, and feeds=atom was also added, for   fine control. * $IkiWiki::version now holds the program version, and is accessible to   plugins.

--- a/basewiki/style.css
+++ b/basewiki/style.css
@@ -113,8 +113,8 @@ td.changelog {
 	font-weight: bold;
 }
 
-/* RSS button. */
-.rssbutton {
+/* Orange feed button. */
+.feedbutton {
 	background: #ff6600;
 	color: white !important;
 	border-left: 1px solid #cc9966;
@@ -128,7 +128,7 @@ td.changelog {
 	text-decoration: none;
 	margin-top: 1em;
 }
-.rssbutton:hover {
+.feedbutton:hover {
 	color: white !important;
 	background: #ff9900;
 }
