--- a/templates/rssitem.tmpl
+++ b/templates/rssitem.tmpl
@@ -12,6 +12,6 @@
 	<category><TMPL_VAR CATEGORY></category>
 	</TMPL_LOOP>
 	</TMPL_IF>
-	<pubDate><TMPL_VAR PUBDATE></pubDate>
+	<pubDate><TMPL_VAR DATE_822></pubDate>
 	<description><![CDATA[<TMPL_VAR CONTENT>]]></description>
 </item>
