* Add a default stylesheet entry for the pagecloud. * Add examples page with some examples of things that can be done using   ikiwiki, like a weblog. The examples can be copied into a user's wiki   for a quick start, without needing to learn everything about how to put   them together.

--- a/basewiki/style.css
+++ b/basewiki/style.css
@@ -83,6 +83,13 @@ td.changelog {
 	font-style: italic;
 }
 
+.pagecloud {
+	padding: 10px 10px;
+	border: 1px solid #aaa;
+	background: #eee;
+	color: black !important;
+}
+
 /* Used for adding a blog page. */
 #blogform {
 	padding: 10px 10px;
