* Work around a strange bug in CGI::FormBuilder 3.0401 that makes   FORM-SUBMIT unusable on customised formbuilder templates. For now,   hardcode the submit buttons in editpage.tmpl instead of using the   template variable, which is ok, since the buttons are static.

--- a/templates/editpage.tmpl
+++ b/templates/editpage.tmpl
@@ -41,7 +41,7 @@ Page type: <TMPL_VAR FIELD-TYPE>
 Optional comment about this change:<br />
 <TMPL_VAR FIELD-COMMENTS><br />
 </TMPL_IF>
-<TMPL_VAR FORM-SUBMIT>
+<input id="_submit" name="_submit" type="submit" value="Save Page" /><input id="_submit_2" name="_submit" type="submit" value="Preview" /><input id="_submit_3" name="_submit" type="submit" value="Cancel" />
 <TMPL_VAR HELPONFORMATTINGLINK>
 <TMPL_VAR FORM-END>
 <TMPL_IF NAME="PAGE_PREVIEW">
