--- a/templates/editpage.tmpl
+++ b/templates/editpage.tmpl
@@ -14,11 +14,11 @@
 <body>
 <TMPL_IF NAME="PAGE_CONFLICT">
 <p>
-<b>Your changes confict with other changes made to the page.</b>
+<b>Your changes conflict with other changes made to the page.</b>
 </p>
 <p>
 Conflict markers have been inserted into the page content. Reconcile the
-confict and commit again to save your changes.
+conflict and commit again to save your changes.
 </p>
 </TMPL_IF>
 <TMPL_VAR FORM-START>
