* Make auth methods pluggable. * Move httpauth support to a plugin. * Add an openid plugin to support logging in using OpenID.

--- a/basewiki/style.css
+++ b/basewiki/style.css
@@ -205,3 +205,11 @@ li.L7 {
 li.L8 {
 	list-style: upper-alpha;
 }
+
+input#openid_url {
+	background: url(http://openid.net/login-bg.gif) no-repeat;
+	background-color: #fff;
+	background-position: 0 50%;
+	color: #000;
+	padding-left: 18px;
+}
