--- a/templates/notifymail.tmpl
+++ b/templates/notifymail.tmpl
@@ -1,4 +1,4 @@
-The following change was made to <TMPL_VAR WIKINAME> by <TMPL_VAR USER>:
+The following change was made by <TMPL_VAR USER>:
 
 <TMPL_VAR MESSAGE>
 <TMPL_VAR DIFF>
