add a poll plugin

--- a/basewiki/style.css
+++ b/basewiki/style.css
@@ -206,6 +206,19 @@ li.L8 {
 	list-style: upper-alpha;
 }
 
+hr.poll {
+	height: 10pt;
+	color: white !important;
+	background: #eee;
+	border: 2px solid black;
+}
+div.poll {
+	margin-top: 1ex;
+	margin-bottom: 1ex;
+	padding: 1ex 1ex;
+	border: 1px solid #aaa;
+}
+
 input#openid_url {
 	background: url(http://openid.net/login-bg.gif) no-repeat;
 	background-color: #fff;
