* Add mirrorlist plugin.

--- a/templates/page.tmpl
+++ b/templates/page.tmpl
@@ -80,6 +80,7 @@ Links:
 <span class="pageinfo">
 <!-- from <TMPL_VAR NAME=WIKINAME> -->
 Last edited <TMPL_VAR NAME=MTIME>
+<TMPL_IF EXTRAFOOTER><TMPL_VAR EXTRAFOOTER></TMPL_IF>
 </span>
 </div>
 
