--- a/templates/page.tmpl
+++ b/templates/page.tmpl
@@ -77,11 +77,11 @@ Links:
 </div>
 
 <div id="footer">
-<span class="pageinfo">
+<div class="pageinfo">
 <!-- from <TMPL_VAR NAME=WIKINAME> -->
 Last edited <TMPL_VAR NAME=MTIME>
 <TMPL_IF EXTRAFOOTER><TMPL_VAR EXTRAFOOTER></TMPL_IF>
-</span>
+</div>
 </div>
 
 </body>
