* Fix bogus use of CDATA in atom feeds. Closes: #406898

--- a/templates/atomitem.tmpl
+++ b/templates/atomitem.tmpl
@@ -17,7 +17,7 @@
 	<TMPL_ELSE>
 	<content type="xhtml" xml:lang="en">
 	 <div xmlns="http://www.w3.org/1999/xhtml">
-	 ![CDATA[<TMPL_VAR CONTENT>]]
+	 <TMPL_VAR CONTENT>
 	 </div>
 	</content>
 	</TMPL_IF>
