* New domain name for ikiwiki: ikiwiki.info. Update your links.

--- a/doc/css_market/kirkambar.css
+++ b/doc/css_market/kirkambar.css
@@ -131,7 +131,7 @@ td.changelog {
  * Attribution `div` for IkiWiki.  Use something like as follows:
  *		<div id="attribution">
  *		    This site is maintained using Joey Hess's
- *		    <a href="http://ikiwiki.kitenet.net/">
+ *		    <a href="http://ikiwiki.info/">
  *		        <img src="ikiwiki.png" title="IkiWiki" alt="IkiWiki" />
  *		    </a>.
  *		</div>
