--- a/templates/atompage.tmpl
+++ b/templates/atompage.tmpl
@@ -9,7 +9,7 @@
 </author>
 <id><TMPL_VAR PAGEURL></id>
 <subtitle type="html"><TMPL_VAR FEEDDESC ESCAPE=HTML></subtitle>
-<generator uri="http://ikiwiki.kitenet.net/" version="<TMPL_VAR VERSION>">ikiwiki</generator>
+<generator uri="http://ikiwiki.info/" version="<TMPL_VAR VERSION>">ikiwiki</generator>
 <updated><TMPL_VAR FEEDDATE></updated>
 <TMPL_VAR CONTENT>
 </feed>
