--- a/templates/atomitem.tmpl
+++ b/templates/atomitem.tmpl
@@ -8,7 +8,7 @@
 	<link href="<TMPL_VAR PERMALINK>"/>
 	<TMPL_IF NAME="CATEGORIES">
 	<TMPL_LOOP NAME="CATEGORIES">
-	<category><TMPL_VAR CATEGORY></category>
+	<category term="<TMPL_VAR CATEGORY>" />
 	</TMPL_LOOP>
 	</TMPL_IF>
 	<updated><TMPL_VAR DATE_3339></updated>
