* Add a openidlogin-bg.gif to wikiicons and have the stylesheet use it for the   OpenID login form rather than linking to a remote logo, to avoid various   issues. Since there is not yet a license for the actual OpenID logo, this   file is currently a blank image. Users who want to can copy   http://openid.net/login-bg.gif into their wiki.

--- a/doc/style.css
+++ b/doc/style.css
@@ -220,7 +220,7 @@ div.poll {
 }
 
 input#openid_url {
-	background: url(http://openid.net/login-bg.gif) no-repeat;
+	background: url(wikiicons/openidlogin-bg.gif) no-repeat;
 	background-color: #fff;
 	background-position: 0 50%;
 	color: #000;
