--- a/templates/editpage.tmpl
+++ b/templates/editpage.tmpl
@@ -42,6 +42,17 @@ Perhaps someone else has deleted it or moved it. If you want to recreate
 this page with your text, click "Save Page" again.
 </p>
 </TMPL_IF>
+<TMPL_IF NAME="CREATION_CONFLICT">
+<p>
+<b>While you were creating this page, someone else independently created a page
+with the same name.</b>
+</p>
+<p>
+The edit box below contains the page's current content, followed by the 
+content you entered previously, to allow you to merge the two contents
+together before saving.
+</p>
+</TMPL_IF>
 <TMPL_VAR FORM-START>
 <div class="header">
 <span><TMPL_VAR INDEXLINK>/ <TMPL_VAR FORM-TITLE></span>
