--- a/templates/editpage.tmpl
+++ b/templates/editpage.tmpl
@@ -49,7 +49,7 @@ with the same name.</b>
 </p>
 <p>
 The edit box below contains the page's current content, followed by the 
-content you entered previously, to allow you to merge the two contents
+content you entered previously, to allow you to merge the two
 together before saving.
 </p>
 </TMPL_IF>
