--- a/doc/css_market/zack.css
+++ b/doc/css_market/zack.css
@@ -4,9 +4,9 @@
  * License: GNU General Public License version 2 or above.
  *
  * TODO
- * - plone-like actions in the toplevel bar, but remember: resiste the
+ * - plone-like actions in the toplevel bar, but remember: resist the
  *   temptation of making them floating to the right: the breadcrumb trail can
- *   grow indefinetely
+ *   grow indefinitely
  * - blog form aligned to the right, keeping the RSS logo to the left
  * - some rendering for the tags (a la 'xhtml' logo of plone? ...)
  * - some rendering for backlinks
