use popup balloon for more backlinks, rather than expanding on hover, since in some cases it's not possible to move the mouse over the more backlinks using the old method

--- a/templates/page.tmpl
+++ b/templates/page.tmpl
@@ -75,7 +75,7 @@ Links:
 </TMPL_LOOP>
 <TMPL_IF NAME="MORE_BACKLINKS">
 <span class="popup">...
-<span class="expand">
+<span class="balloon">
 <TMPL_LOOP NAME="MORE_BACKLINKS">
 <a href="<TMPL_VAR NAME=URL>"><TMPL_VAR NAME=PAGE></a>
 </TMPL_LOOP>
