--- a/templates/blogpost.tmpl
+++ b/templates/blogpost.tmpl
@@ -9,7 +9,8 @@
 <input type="hidden" name="do" value="blog" />
 <input type="hidden" name="from" value="<TMPL_VAR ROOTPAGE>" />
 <input type="hidden" name="subpage" value="1" />
-Add a new post titled: <input name="title" size="40" />
+<TMPL_VAR POSTFORMTEXT>
+<input name="title" size="40" />
 <input type="submit" value="Edit" />
 </div>
 </form>
