* Change basewiki CSS to not put a border around images used as links.

--- a/doc/style.css
+++ b/doc/style.css
@@ -60,6 +60,10 @@ div.tags {
 	width: 100%;
 }
 
+img {
+	border: 0px;
+}
+
 /* Stuff for the RecentChanges table. */
 tr.changeheader {
 	background: #eee;
