* Move the footer div to enclose tags and links too. * More style sheet updates, remove the hack that used the tags div to create   the footer border.

--- a/doc/style.css
+++ b/doc/style.css
@@ -35,19 +35,17 @@
 	padding: .2em .4em;
 }
 
-#backlinks {
-	margin: 1em 0;
-}
-
 .tags {
 	clear: both;
 }
 
-div.tags {
+#footer {
+	clear: both;
+	margin: 1em 0;
 	border-top: 1px solid #000;
 }
 
-#footer {
+#backlinks {
 	margin: 1em 0;
 }
 
