--- a/doc/style.css
+++ b/doc/style.css
@@ -39,14 +39,18 @@
 	clear: both;
 }
 
-#footer {
-	clear: both;
+#tags {
 	margin: 1em 0;
-	border-top: 1px solid #000;
 }
 
 #backlinks {
 	margin: 1em 0;
+}
+
+#footer {
+	clear: both;
+	margin: 1em 0;
+	border-top: 1px solid #000;
 }
 
 #searchform {
