--- a/doc/style.css
+++ b/doc/style.css
@@ -45,6 +45,14 @@
 	border-top: 1px solid #000;
 }
 
+div.tags {
+	margin-top: 1em;
+}
+
+#backlinks {
+	margin-top: 1em;
+}
+
 #searchform {
 	display: inline;
 	float: right;
@@ -105,6 +113,7 @@ td.changelog {
 	clear: both;
 	font-style: italic;
 	display: block;
+	margin-top: 1em;
 }
 
 /* Used for invalid form fields. */
