styling for formbuilder fieldsets

--- a/doc/style.css
+++ b/doc/style.css
@@ -269,3 +269,12 @@ input#openid_url {
 	-moz-opacity: 0.95;
 	filter: alpha(opacity=95);
 }
+
+/* Formbuilder styling */
+fieldset {
+	margin: 1ex 0;
+	border: 1px solid black;
+}
+legend {
+	padding: 0 1ex;
+}
