--- a/doc/css_market/embeddedmoose.css
+++ b/doc/css_market/embeddedmoose.css
@@ -1,6 +1,6 @@
-// Embedded Moose local.css for use with ikiwiki
-// Written by Josh Triplett <josh@freedesktop.org>
-// Some ideas from the Debian lighttpd index.html page.
+/* Embedded Moose local.css for use with ikiwiki
+ * Written by Josh Triplett <josh@freedesktop.org>
+ * Some ideas from the Debian lighttpd index.html page. */
 
 body { background: #e7e7e7; }
 
