Fix stylesheet for presence of actions.

--- a/doc/css_market/embeddedmoose.css
+++ b/doc/css_market/embeddedmoose.css
@@ -9,4 +9,5 @@ body { background: #e7e7e7; }
 .header { background: #4b6983; border: 2px solid #7590ae; padding: 10px; color: #ffffff; font-family: sans-serif;}
 .header a { margin-right: 1ex; color: #ffffff; font-family: sans-serif;}
 
-#footer { border-top: none; font-family: sans-serif;}
+.actions ul { border: none; padding-bottom: 0px; font-family: sans-serif;}
+#footer { border: none; font-family: sans-serif;}
