Remove img style attribute from recentchanges.tmpl; the default style.css covers this.

--- a/templates/recentchanges.tmpl
+++ b/templates/recentchanges.tmpl
@@ -39,7 +39,7 @@
 		<TMPL_LOOP NAME="PAGES">
 			<TMPL_IF NAME="DIFFURL">
 				<a href="<TMPL_VAR NAME="DIFFURL">">
-				<img alt="diff" src="wikiicons/diff.png" style="border-style: none" />
+				<img alt="diff" src="wikiicons/diff.png" />
 				</a>
 				<TMPL_VAR NAME="LINK">
 			<TMPL_ELSE>
