* Make all templates have a footer div to ease themeing. Required template   and style sheet updates, and unless you're using customised versions,   you'll want to rebuild wikis on upgrade to this version to avoid   inconsistencies. * Allow WIKINAME to to used in footers, as an example of something to put   there.

--- a/doc/style.css
+++ b/doc/style.css
@@ -39,7 +39,7 @@
 	clear: both;
 }
 
-#footer {
+#pageinfo {
 	clear: both;
 	margin: 1em 0;
 	border-top: 1px solid #000;
@@ -109,7 +109,7 @@ td.changelog {
 	border: 1px solid #aaa;
 }
 
-.pageinfo {
+.pagedate {
 	clear: both;
 	font-style: italic;
 	display: block;
