--- a/templates/editpage.tmpl
+++ b/templates/editpage.tmpl
@@ -86,5 +86,8 @@ Optional comment about this change:<br />
 <TMPL_VAR PAGE_PREVIEW>
 </div>
 </TMPL_IF>
+<div id="footer">
+<!-- from <TMPL_VAR NAME=WIKINAME> -->
+</div>
 </body>
 </html>
