* More consistent encoding of titles in rss and atom feeds. Don't use   ESCAPE=HTML for titles in the templates for these feeds, and instead   escape the title going in to the template. Previously, the title was   sometimes double-escaped in a feed (if set via meta title), and sometimes   not (if set from the page filename). * In the meta plugin, when a title is set, encode the html entities in it   numerically. This works better in the current landscape of a rss spec that   doesn't specify encoding, and variously broken feed consumers, according   to <http://www.rssboard.org/rss-profile#data-types-characterdata>.

--- a/templates/atomitem.tmpl
+++ b/templates/atomitem.tmpl
@@ -1,5 +1,5 @@
 <entry>
-	<title><TMPL_VAR TITLE ESCAPE=HTML></title>
+	<title><TMPL_VAR TITLE></title>
 	<TMPL_IF NAME="AUTHOR">
 	<author><TMPL_VAR AUTHOR ESCAPE=HTML></author>
 	<TMPL_ELSE>
