--- a/templates/atompage.tmpl
+++ b/templates/atompage.tmpl
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <feed xmlns="http://www.w3.org/2005/Atom">
-<title><TMPL_VAR TITLE ESCAPE=HTML></title>
+<title><TMPL_VAR TITLE></title>
 <link href="<TMPL_VAR PAGEURL>"/>
 <link href="<TMPL_VAR FEEDURL>" rel="self"/>
 <author>
