--- a/templates/rsspage.tmpl
+++ b/templates/rsspage.tmpl
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <rss version="2.0" xmlns:dc="http://purl.org/dc/elements/1.1/">
 <channel>
-<title><TMPL_VAR TITLE ESCAPE=HTML></title>
+<title><TMPL_VAR TITLE></title>
 <link><TMPL_VAR PAGEURL></link>
 <description><TMPL_VAR FEEDDESC ESCAPE=HTML></description>
 <TMPL_VAR CONTENT>
