--- a/templates/blogpost.tmpl
+++ b/templates/blogpost.tmpl
@@ -6,11 +6,11 @@
 <TMPL_IF NAME="ATOMURL">
 <a class="feedbutton" type="application/atom+xml" href="<TMPL_VAR NAME=ATOMURL>">Atom</a>
 </TMPL_IF>
-<input type="hidden" name="do" value="blog" />
-<input type="hidden" name="from" value="<TMPL_VAR ROOTPAGE>" />
-<input type="hidden" name="subpage" value="1" />
+<input type="hidden" name="do" value="blog">
+<input type="hidden" name="from" value="<TMPL_VAR ROOTPAGE>">
+<input type="hidden" name="subpage" value="1">
 <TMPL_VAR POSTFORMTEXT>
-<input name="title" size="40" />
-<input type="submit" value="Edit" />
+<input name="title" size="40">
+<input type="submit" value="Edit">
 </div>
 </form>
