--- a/templates/editpage.tmpl
+++ b/templates/editpage.tmpl
@@ -1,14 +1,14 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
- "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+  "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-<base href="<TMPL_VAR BASEURL>" />
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<base href="<TMPL_VAR BASEURL>">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title><TMPL_VAR FORM-TITLE></title>
-<link rel="stylesheet" href="<TMPL_VAR BASEURL>style.css" type="text/css" />
-<link rel="stylesheet" href="<TMPL_VAR BASEURL>local.css" type="text/css" />
+<link rel="stylesheet" href="<TMPL_VAR BASEURL>style.css" type="text/css">
+<link rel="stylesheet" href="<TMPL_VAR BASEURL>local.css" type="text/css">
 <TMPL_IF NAME="FAVICON">
-<link rel="icon" href="<TMPL_VAR BASEURL><TMPL_VAR FAVICON>" type="image/x-icon" />
+<link rel="icon" href="<TMPL_VAR BASEURL><TMPL_VAR FAVICON>" type="image/x-icon">
 </TMPL_IF>
 </head>
 <body>
@@ -65,20 +65,20 @@ together before saving.
 Page location: <TMPL_VAR FIELD-PAGE>
 Page type: <TMPL_VAR FIELD-TYPE>
 <TMPL_ELSE>
-<br />
+<br>
 <TMPL_VAR FIELD-PAGE>
 <TMPL_VAR FIELD-TYPE>
 </TMPL_IF>
-<TMPL_VAR FIELD-EDITCONTENT><br />
+<TMPL_VAR FIELD-EDITCONTENT><br>
 <TMPL_IF NAME="CAN_COMMIT">
-Optional comment about this change:<br />
-<TMPL_VAR FIELD-COMMENTS><br />
+Optional comment about this change:<br>
+<TMPL_VAR FIELD-COMMENTS><br>
 </TMPL_IF>
-<input id="_submit" name="_submit" type="submit" value="Save Page" /><input id="_submit_2" name="_submit" type="submit" value="Preview" /><input id="_submit_3" name="_submit" type="submit" value="Cancel" />
+<input id="_submit" name="_submit" type="submit" value="Save Page"><input id="_submit_2" name="_submit" type="submit" value="Preview"><input id="_submit_3" name="_submit" type="submit" value="Cancel">
 <TMPL_VAR HELPONFORMATTINGLINK>
 <TMPL_VAR FORM-END>
 <TMPL_IF NAME="PAGE_PREVIEW">
-<hr />
+<hr>
 <div class="header">
 <span>Page preview:</span>
 </div>
