--- a/templates/editpage.tmpl
+++ b/templates/editpage.tmpl
@@ -1,17 +1,3 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
- "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html>
-<head>
-<base href="<TMPL_VAR BASEURL>" />
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title><TMPL_VAR FORM-TITLE></title>
-<link rel="stylesheet" href="<TMPL_VAR BASEURL>style.css" type="text/css" />
-<link rel="stylesheet" href="<TMPL_VAR BASEURL>local.css" type="text/css" />
-<TMPL_IF NAME="FAVICON">
-<link rel="icon" href="<TMPL_VAR BASEURL><TMPL_VAR FAVICON>" type="image/x-icon" />
-</TMPL_IF>
-</head>
-<body>
 <TMPL_IF NAME="PAGE_CONFLICT">
 <p>
 <b>Your changes conflict with other changes made to the page.</b>
@@ -54,9 +40,6 @@ together before saving.
 </p>
 </TMPL_IF>
 <TMPL_VAR FORM-START>
-<div class="header">
-<span><TMPL_VAR INDEXLINK>/ <TMPL_VAR FORM-TITLE></span>
-</div>
 <TMPL_VAR FIELD-DO>
 <TMPL_VAR FIELD-FROM>
 <TMPL_VAR FIELD-RCSINFO>
@@ -74,20 +57,18 @@ Page type: <TMPL_VAR FIELD-TYPE>
 Optional comment about this change:<br />
 <TMPL_VAR FIELD-COMMENTS><br />
 </TMPL_IF>
-<input id="_submit" name="_submit" type="submit" value="Save Page" /><input id="_submit_2" name="_submit" type="submit" value="Preview" /><input id="_submit_3" name="_submit" type="submit" value="Cancel" />
+<input id="_submit" name="_submit" type="submit" value="Save Page" />
+<input id="_submit_2" name="_submit" type="submit" value="Preview" />
+<input id="_submit_3" name="_submit" type="submit" value="Cancel" />
 <TMPL_VAR HELPONFORMATTINGLINK>
 <TMPL_VAR FORM-END>
+
 <TMPL_IF NAME="PAGE_PREVIEW">
 <hr />
 <div class="header">
 <span>Page preview:</span>
 </div>
-<div id="content">
+<div id="preview">
 <TMPL_VAR PAGE_PREVIEW>
 </div>
 </TMPL_IF>
-<div id="footer">
-<!-- from <TMPL_VAR NAME=WIKINAME> -->
-</div>
-</body>
-</html>
