--- a/templates/editpage.tmpl
+++ b/templates/editpage.tmpl
@@ -57,9 +57,7 @@ Page type: <TMPL_VAR FIELD-TYPE>
 Optional comment about this change:<br />
 <TMPL_VAR FIELD-COMMENTS><br />
 </TMPL_IF>
-<input id="_submit" name="_submit" type="submit" value="Save Page" />
-<input id="_submit_2" name="_submit" type="submit" value="Preview" />
-<input id="_submit_3" name="_submit" type="submit" value="Cancel" />
+<TMPL_VAR FORM-SUBMIT>
 <TMPL_VAR HELPONFORMATTINGLINK>
 <TMPL_VAR FORM-END>
 
