* meta: Support license and copyright information. The information will   be shown in the page footer. HTML will also be inserted that should   support the rel=license microformat as well as the HTML spec's   rel=copyright.

--- a/templates/inlinepage.tmpl
+++ b/templates/inlinepage.tmpl
@@ -30,6 +30,20 @@ Tags:
 </span>
 </TMPL_IF>
 
+<TMPL_IF COPYRIGHT>
+<div class="copyright">
+<a name="page_copyright"></a>
+<TMPL_VAR COPYRIGHT>
+</div>
+</TMPL_IF>
+
+<TMPL_IF LICENSE>
+<div class="license">
+<a name="page_license"></a>
+License: <TMPL_VAR LICENSE>
+</div>
+</TMPL_IF>
+
 <TMPL_IF NAME="HAVE_ACTIONS">
 <div class="actions">
 <ul>
