--- a/templates/page.tmpl
+++ b/templates/page.tmpl
@@ -88,6 +88,20 @@ Links:
 </div>
 </TMPL_IF>
 
+<TMPL_IF COPYRIGHT>
+<div class="copyright">
+<a name="page_copyright"></a>
+<TMPL_VAR COPYRIGHT>
+</div>
+</TMPL_IF>
+
+<TMPL_IF LICENSE>
+<div class="license">
+<a name="page_license"></a>
+License: <TMPL_VAR LICENSE>
+</div>
+</TMPL_IF>
+
 <div class="pagedate">
 Last edited <TMPL_VAR NAME=MTIME>
 </div>
