basic styling for license and copyright

--- a/templates/inlinepage.tmpl
+++ b/templates/inlinepage.tmpl
@@ -31,13 +31,13 @@ Tags:
 </TMPL_IF>
 
 <TMPL_IF COPYRIGHT>
-<div class="copyright">
+<div class="pagecopyright">
 <TMPL_VAR COPYRIGHT>
 </div>
 </TMPL_IF>
 
 <TMPL_IF LICENSE>
-<div class="license">
+<div class="pagelicense">
 License: <TMPL_VAR LICENSE>
 </div>
 </TMPL_IF>
