--- a/doc/style.css
+++ b/doc/style.css
@@ -102,7 +102,9 @@ td.changelog {
 	border: 1px solid #aaa;
 }
 
-.pagedate {
+.pagedate,
+.pagelicense,
+.pagecopyright {
 	clear: both;
 	font-style: italic;
 	display: block;
