--- a/templates/page.tmpl
+++ b/templates/page.tmpl
@@ -90,14 +90,14 @@ Links:
 
 <TMPL_IF COPYRIGHT>
 <div class="copyright">
-<a name="page_copyright"></a>
+<a name="pagecopyright"></a>
 <TMPL_VAR COPYRIGHT>
 </div>
 </TMPL_IF>
 
 <TMPL_IF LICENSE>
 <div class="license">
-<a name="page_license"></a>
+<a name="pagelicense"></a>
 License: <TMPL_VAR LICENSE>
 </div>
 </TMPL_IF>
