--- a/templates/page.tmpl
+++ b/templates/page.tmpl
@@ -91,6 +91,20 @@ Links:
 </div>
 </TMPL_IF>
 
+<TMPL_IF COPYRIGHT>
+<div class="pagecopyright">
+<a name="pagecopyright"></a>
+<TMPL_VAR COPYRIGHT>
+</div>
+</TMPL_IF>
+
+<TMPL_IF LICENSE>
+<div class="pagelicense">
+<a name="pagelicense"></a>
+License: <TMPL_VAR LICENSE>
+</div>
+</TMPL_IF>
+
 <div class="pagedate">
 Last edited <TMPL_VAR NAME=MTIME>
 </div>
